	PR target/48245 	* config/darwin.h (LINK_COMMAND_SPEC_A): Use LINK_PLUGIN_SPEC.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@171598 138bc75d-0d04-0410-961f-82ee72b054a4